# Dongmin_Kim_Bear_TAKE-HOME-PROJECTS

./: .clang-format  ATMModule.h  CMakeLists.txt  ReadMe.md  accountList.json  main.cpp  type.h  user.h
ATMModule/: ATMModule.cpp  ATMModule.h
BankAPI/: BankAPI.cpp  BankAPI.h  accounrControl.h  verfication.cpp  verification.h
FlowModule/: commandQueue.h  flowModule.cpp  flowModule.h
UserModuele/: user.cpp  user.h
UserModule/: user.cpp  user.h
include/: type.h
